# wavectl

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
src/wavectl/: ai.py  config_manager.py  i18n.py  main.py  settings.py  ssh.py  theme.py  widgets.py
tests/: schema_validators.py  test_ai_global.py  test_main.py  test_new_modules.py  test_ssh_env.py  test_updates_releasenotes.py  test_updates_releasenotes_new.py  test_updates_v013.py  test_updates_v0131.py  test_updates_v0131_features.py  test_updates_v013_extra.py  test_wavectl.py
