[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavectl"
version = "0.1.0"
description = "A lightweight, interactive CLI tool for WaveTerm configuration."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
wavectl = "wavectl.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wavectl"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
